End of Day 1 Add basic movement, collision Add parallax background Add basic enemy AI

--- a/Out Of Control/Assembly-CSharp.csproj
+++ b/Out Of Control/Assembly-CSharp.csproj
@@ -45,7 +45,11 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\FlyManController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\SpikeManController.cs" />
+     <Compile Include="Assets\Scripts\WingManController.cs" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.3.7f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
